<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/pastel_lavender"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/manage_requests_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/manage_requests"
            android:textColor="@color/raisin_black"
            android:textSize="11sp"
            app:icon="@android:drawable/ic_popup_reminder"
            app:iconTint="@color/raisin_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/profile_pic" />

            <TextView
                android:id="@+id/username_profile"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="25dp"
                android:text="@string/myusername"
                android:textColor="@color/raisin_black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/logout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="logout"
                android:clickable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num_followers"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:text="@string/_0_string"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/num_following"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/_0_string"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/filter_button"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginStart="300dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:scaleType="centerInside"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/filter_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profile_followers_label"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/followers"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/profile_following_label"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/following"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/history_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_header" />

</androidx.constraintlayout.widget.ConstraintLayout>
