<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <LinearLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/pastel_lavender"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/back_button"
            android:background="@android:color/transparent"
            android:contentDescription="Go back to your previous page"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:paddingHorizontal="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/profile_pic" />

            <TextView
                android:id="@+id/username_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/myusername"
                android:textColor="@color/raisin_black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="40dp">

                <Button
                    android:id="@+id/follow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Follow" />

                <Button
                    android:id="@+id/pending_button"
                    android:layout_width="wrap_content"
                    android:layout_height = "wrap_content"
                    android:text="Pending"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/following_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Following"
                    android:visibility="gone" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/num_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="45dp"
                android:paddingTop="10dp"
                android:paddingEnd="45dp"
                android:text="@string/_0_string"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/num_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="45dp"
                android:paddingTop="15dp"
                android:paddingEnd="45dp"
                android:text="@string/_0_string"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/profile_followers_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/followers"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/profile_following_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/following"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/history_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_header" />

</androidx.constraintlayout.widget.ConstraintLayout>